<resources>
    <string name="app_name">Handshake</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_header_intro_text">Hello.</string>
    <string name="text_description_intro_text">It appears this is your first time using Handshake. Let\'s get started by creating your encrypted profile.</string>
    <string name="btn_intro_lets_get_started">Let\'s Get Started</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_login">Login</string>
    <string name="text_header_intro_profile_text">Create a \nPrimary Profile.</string>
    <string name="text_header_intro_profile_duress_text">Create a \nDuress Profile.</string>
    <string name="text_description_intro_profile_text">
        <![CDATA[Handshake does not use centralize user accounts and it doesn\'t rely on your device encryption. <a href=\"https://google.com\">more</a>]]>
    </string>
    <string name="text_description_intro_profile_duress_text">Handshake also supports a duress profile. This is a special \"trap door\" profile you can use in case you are compelled to decrypt your profile. more</string>
    <string name="text_hint_password">Password</string>
    <string name="text_hint_password_confirm">Confirm</string>
    <string name="btn_intro_profile_skip">Skip</string>
    <string name="text_title_handshake">Handshake</string>
    <string name="text_indicator_duress">Duress</string>
    <string name="text_hint_chat_new_message">New Message</string>

    <plurals name="time_years_ago">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>
    <plurals name="time_months_ago">
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>
    <plurals name="time_days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="time_hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="time_minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="time_seconds_ago">
        <item quantity="one">%d second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>

    <plurals name="time_years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="time_months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="time_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="time_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="time_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="time_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
</resources>
