<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
                name="callback"
                type="io.nomasters.android.handshake.ui.introduress.IntroDuressProfileFragmentActionCallback"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_intro_duress"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            tools:context="./ui/introprofile/IntroProfileFragment">

        <View
                android:background="@color/colorBackground"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.50"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_keyline_start_1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/keyline_horizontal"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_keyline_end_1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/keyline_horizontal"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_keyline_start_2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/keyline_horizontal_2"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_keyline_end_2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/keyline_horizontal_2"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_keyline_top_1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/keyline_vertical"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_keyline_bottom_1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/keyline_vertical"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_keyline_top_2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/keyline_vertical_2"/>

        <TextView
                android:gravity="start"
                android:id="@+id/text_header_intro_profile_duress_text"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_width="0dp"
                android:text="@string/text_header_intro_profile_duress_text"
                app:layout_constraintEnd_toEndOf="@+id/guideline_keyline_end_2"
                app:layout_constraintStart_toStartOf="@+id/guideline_keyline_start_2"
                app:layout_constraintTop_toBottomOf="@+id/guideline_keyline_top_2"
                style="@style/AppTheme.TextAppearance.Display1"/>

        <TextView
                android:gravity="start"
                android:htmlText="@{@string/text_description_intro_profile_duress_text}"
                android:id="@+id/text_description_intro_profile_duress_text"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_width="300dp"
                app:layout_constraintStart_toStartOf="@+id/guideline_keyline_start_2"
                app:layout_constraintTop_toBottomOf="@+id/text_header_intro_profile_duress_text"
                style="@style/AppTheme.TextAppearance.Body1.Html"
                tools:text="@string/text_description_intro_profile_duress_text"/>

        <com.google.android.material.textfield.TextInputLayout
                android:clipToPadding="false"
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline_center"
                style="@style/AppTheme.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/text_hint_password"
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:onClearEditTextListener="@{false}"
                    style="@style/AppTheme.TextInputEditText.Password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_hint_password_confirm"
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_password"
                style="@style/AppTheme.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/text_hint_password_confirm"
                    android:id="@+id/edit_text_password_confirm"
                    android:layout_width="match_parent"
                    android:onClearEditTextListener="@{false}"
                    style="@style/AppTheme.TextInputEditText.Password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btn_intro_profile_submit"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:onClick="@{()->callback.onSubmitClicked()}"
                android:text="@string/btn_submit"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@id/btn_intro_profile_skip"
                app:layout_constraintEnd_toEndOf="@+id/guideline_keyline_end_1"
                app:layout_constraintStart_toStartOf="@+id/guideline_keyline_start_1"
                style="@style/AppTheme.Widget.Button.Colored.Primary"
                />

        <Button
                android:id="@+id/btn_intro_profile_skip"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:onClick="@{()->callback.onSkipClicked()}"
                android:text="@string/btn_intro_profile_skip"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@id/guideline_keyline_bottom_1"
                app:layout_constraintEnd_toEndOf="@+id/guideline_keyline_end_1"
                app:layout_constraintStart_toStartOf="@+id/guideline_keyline_start_1"
                style="@style/AppTheme.Widget.Button.NoBackground"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>